Bug in latex prefix.

--- a/book/dpc-style.tex
+++ b/book/dpc-style.tex
@@ -4,7 +4,7 @@
 
 \renewcommand{\sectionNewpage}{\newpage \thispagestyle{empty}}
 
-\renewcommand{\preDoc}{\sloppy
+\renewcommand{\preDoc}{\sloppy}
 \renewcommand{\footrulewidth}{0pt}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhead{}
@@ -12,4 +12,4 @@
 \fancyhead[LE,RO]{\fontspec{Latin Modern Roman Caps} \rightmark}
 %\fancyfoot[LO,RE]{\leftmark}
 %\fancyfoot[C]{\thepage}
- }
+ 
