Use fontspec feature for tex ligatures.

--- a/book/dpc-prefix.tex
+++ b/book/dpc-prefix.tex
@@ -2,6 +2,7 @@
 \usepackage{sectsty}
 \usepackage{fontspec}
 \usepackage{fancyhdr}
+\defaultfontfeatures{Mapping=tex-text}
 
 \let\oldtableofcontents=\tableofcontents
 \renewcommand\tableofcontents{
